Tuned styles to show less product columns and hide keyboard by default

--- a/resources/assets/sass/tpv/header.scss
+++ b/resources/assets/sass/tpv/header.scss
@@ -84,6 +84,7 @@ header {
             background-position: center center;
             background-repeat: no-repeat;
             background-size: 28px 30px;
+            float: right;
             margin-right: 0;
             text-indent: -9999px;
             width: 5.8%;
