--- a/resources/assets/sass/tpv/keyboard.scss
+++ b/resources/assets/sass/tpv/keyboard.scss
@@ -2,7 +2,7 @@
     background-color: $color-tpv-white;
     bottom: 57px;
     @include clearfix;
-    /*display: none;*/
+    display: none;
     font-family: 'Open Sans', sans-serif;
     max-width: 257px;
     position: absolute;
